# aigame

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  PROJECT_NEXUS_Complete_Research.md  README.md  TIMELINE.md  TODO-MANUAL.md  docker-compose.yml
api-gateway/: package.json  tsconfig.json
api-gateway/prisma/: schema.prisma
api-gateway/src/: index.ts
data/seed/: nations_base.json
data/universe_rules/: dune.json  got.json  (+1 more)
docs/: api-spec.md  architecture.md  game-design.md
frontend/: package.json
game-engine/: pyproject.toml
game-engine/src/: main.py
game-engine/src/agents/: advisor.py  diplomat.py  game_master.py  narrator.py
game-engine/src/llm/: compression.py  openrouter.py  prompts.py
game-engine/src/models/: action.py  actor.py  event.py  scenario.py  world_state.py
game-engine/src/simulation/: diplomacy.py  narrative_gravity.py  quantitative.py  turn_processor.py
scripts/: deploy.sh  migrate.sh  seed-data.sh  setup.sh
swarm-engine/: pyproject.toml
swarm-engine/src/: main.py
swarm-engine/src/agents/: agent_pool.py  archetypes.py  interviewer.py  persona_generator.py
swarm-engine/src/graph/: graphrag.py  neo4j_client.py
swarm-engine/src/memory/: memory_factory.py  zep_client.py
swarm-engine/src/ontology/: generator.py
swarm-engine/src/ontology/templates/: fantasy.py  historical.py  scifi.py
swarm-engine/src/probability/: distribution_calculator.py  option_ranker.py
swarm-engine/src/reports/: report_agent.py
swarm-engine/src/simulation/: branching.py  emergence.py  sentiment.py  social_sim.py
(+34 files in other folders)
