[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-swarm-engine"
version = "0.1.0"
description = "Project Nexus Swarm Engine — MiroFish/OASIS fork for large-scale agent-based social simulation"
requires-python = ">= 3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "neo4j>=5.17",
    "redis>=5.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
